--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div class="halaman halaman-11">
 			<div class="kotak">
 				<img src="gambar/bears-hug-love-you.gif" id="gambar" style="display: none;">
-				<h1 class="ml13">Chaerunnisa Fajri</h1>
+				<h1 class="ml13">Happy Birthday CHAA </h1>
 			</div>
 			<a href="https://wa.me/6285775395133/" target="_blank" class="tombolmelayang"><i class="fab fa-github"></i></a>
 		</div>
