--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 		<div class="halaman halaman-3">
 			<div class="kotak">
-				<h1 class="ml16">Hari ini adalah hari spesial bagimu. dari sekian banyak orang yang mengucapkan selamat ulang tahun untuk mu, aku ingin menjadi bagian diantaranya.</h1>
+				<h1 class="ml16">Hari ini adalah hari spesial bagimu. dari sekian banyak orang yang mengucapkan selamat ulang tahun untukmu, aku ingin menjadi bagian diantaranya.</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-4">
@@ -84,7 +84,7 @@
 
 		<div class="halaman halaman-8">
 			<div class="kotak">
-				<h1 class="ml12">Di hari ulang tahunmu ini, aku berharap segala yang terbaik datang kepadamu. Salah satunya adalah kehadiranku. </h1>
+				<h1 class="ml12">Di hari ulang tahunmu ini, aku berharap segala yang terbaik datang kepadamu, termasuk juga kehadiranku</h1>
 			</div>
 		</div>
 
@@ -92,7 +92,7 @@
 			<div class="kotak">
 				<h1 class="ml14">
 					<span class="text-wrapper">
-						<span class="letters">Selamat ulang tahun untukmu, orang yang paling aku sayangi!"</span>
+						<span class="letters">Kadonya nyusul yaaa chaaaaaaa wkwk"</span>
 						<span class="line"></span>
 					</span>
 				</h1>
